--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,10 @@
 
 @import url(../blocks/page/page.css);
 @import url(../blocks/text/text.css);
+@import url(../blocks/title/title.css);
+
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__title/header__title.css);
 @import url(../blocks/header/__subtitle/header__subtitle.css);
+
+@import url(../blocks/content/content.css);
