--- a/blocks/correlation/correlation.css
+++ b/blocks/correlation/correlation.css
@@ -1,7 +1,7 @@
 .correlation {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  max-width: 40%;
   justify-content: center;
   align-items: center;
 }
