--- a/pages/index.css
+++ b/pages/index.css
@@ -7,9 +7,12 @@
 @import url(../blocks/title/title.css);
 
 @import url(../blocks/header/header.css);
+@import url(../blocks/separator/separator.css);
 @import url(../blocks/header/__title/header__title.css);
 @import url(../blocks/header/__subtitle/header__subtitle.css);
 @import url(../blocks/country-wealth/__title/country-wealth__title.css);
+@import url(../blocks/medals/medals.css);
+@import url(../blocks/medals/__paragraph/medals__paragraph.css);
 @import url(../blocks/medals/__title/medals__title.css);
 @import url(../blocks/country-wealth/__paragraph/country-wealth__paragraph.css);
 @import url(../blocks/country-wealth/country-wealth.css);
@@ -19,6 +22,8 @@
 @import url(../blocks/correlation/correlation.css);
 
 @import url(../blocks/content/content.css);
+@import url(../blocks/conclusion/conclusion.css);
+@import url(../blocks/conclusion/__paragraph/conclusion__paragraph.css);
 
 canvas {
   max-width: 100%;
